style.css
body{
    background-color: rgb(49, 48, 48);
    color: azure;
    font-family: 'Poppins', sans-serif;
}
.hero {
    position: relative;
    height: 100vh;
    background-image: url('https://cdn.wallpapersafari.com/50/12/i5xmUO.png');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

.hero .overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.5);
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
}
.navbar{
    background-color: black;
}
.gallery{
    margin-top: 25px;
}
.card {
    background-color: #111;
    color: white;
    border: none;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.card:hover {
    transform: translateY(-8px);
    box-shadow: 0 10px 20px rgba(24, 23, 23, 0.5);
}
#tracklistCarousel .carousel-item img {
  width: 100%;
  height: auto;
  object-fit: contain;
  max-height: 70vh;
}
.carousel-caption h5 {
    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
}

* {
  outline: 1px solid red;}

